--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-1</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./Assignment-1-Style/Style.css" />
+  </head>
+  <body class="azeret-mono-all main">
     <header>
-
+      <nav class="navbar">
+        <h4 class="Nav-heading Primary-color">Awlad.H</h4>
+        <button class="btn-1">Download</button>
+      </nav>
+      <div class="Hero">
+        <div class="banner Primary-color">
+          <img src="./assets/Group.png" alt="" />
+          <div class="banner-description">
+            <h1 class="banner-heading">"In the near future,I need to become a Developer."</h1>
+            <p class="para">Embarking on a journey to become a developer empowers you to harness technology, solve real-world problems, and build a future where your creative and technical skills can make a lasting difference.</p>
+            <a href="footer"><button class="btn-2">Contact with me</button></a>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-        
+        <!-- About -->
+         <div id="About">
+            <div>
+                <h1 class="Head">Why Web Development??</h1>
+                <p class="para">Web development allows you to craft engaging online experiences, reach a global audience, and continuously innovate in a dynamic and ever-evolving digital landscape.</p>
+            </div>
+            <div class="card-details">
+                <div class="card">
+                    <h1 class="Head">I will Do Coding and Change The World</h1>
+                    <p class="para">Becoming a developer offers the opportunity to create innovative solutions, continually learn new technologies, and transform ideas into impactful applications, driving both personal and professional growth.</p>
+                </div>
+                <div></div>
+            </div>
+         </div>
+      
     </main>
-</body>
+  </body>
 </html>
