--- a/index.html
+++ b/index.html
@@ -22,28 +22,93 @@
         <div class="banner Primary-color">
           <img src="./assets/Group.png" alt="" />
           <div class="banner-description">
-            <h1 class="banner-heading">"In the near future,I need to become a Developer."</h1>
-            <p class="para">Embarking on a journey to become a developer empowers you to harness technology, solve real-world problems, and build a future where your creative and technical skills can make a lasting difference.</p>
+            <h1 class="banner-heading">
+              "In the near future,I need to become a Developer."
+            </h1>
+            <p class="para">
+              Embarking on a journey to become a developer empowers you to
+              harness technology, solve real-world problems, and build a future
+              where your creative and technical skills can make a lasting
+              difference.
+            </p>
             <a href="footer"><button class="btn-2">Contact with me</button></a>
           </div>
         </div>
       </div>
     </header>
     <main>
-        <!-- About -->
-         <div id="About">
-            <div>
-                <h1 class="Head">Why Web Development??</h1>
-                <p class="para">Web development allows you to craft engaging online experiences, reach a global audience, and continuously innovate in a dynamic and ever-evolving digital landscape.</p>
+      <!-- About -->
+      <div id="About">
+        <div>
+          <h1 class="Head">Why Web Development??</h1>
+          <p class="para">
+            Web development allows you to craft engaging online experiences,
+            reach a global audience, and continuously innovate in a dynamic and
+            ever-evolving digital landscape.
+          </p>
+        </div>
+        <!-- Card Section -->
+        <section class="card-section">
+          <!-- card-1 -->
+          <div class="card-details">
+            <div class="card Primary-color">
+              <h1 class="Head-Secondary" style="padding-bottom: 16px">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="para">
+                Becoming a developer offers the opportunity to create innovative
+                solutions and transform ideas into impactful applications,
+                driving both personal and professional growth.
+              </p>
+              <button class="local-btn">Learn More</button>
             </div>
-            <div class="card-details">
-                <div class="card">
-                    <h1 class="Head">I will Do Coding and Change The World</h1>
-                    <p class="para">Becoming a developer offers the opportunity to create innovative solutions, continually learn new technologies, and transform ideas into impactful applications, driving both personal and professional growth.</p>
-                </div>
-                <div></div>
+            <div><img class="img-1" src="/assets/Layer_1.png" alt="" /></div>
+          </div>
+          <!-- Card-2 -->
+          <div class="card-details">
+            <div><img class="img-2" src="/assets/Group 3.png" alt="" /></div>
+            <div class="card-2 Primary-color">
+              <h1 class="Head-Secondary" style="padding-bottom: 16px">
+                I will help People by creating Modern Web System
+              </h1>
+              <p class="para">
+                By creating modern web systems, I strive to help people enhance
+                their online experiences and streamline their digital
+                interactions.
+              </p>
+              <a href=""><button class="local-btn">Learn More</button></a>
             </div>
-         </div>
+          </div>
+          <!-- Card-3 -->
+          <div class="card-details">
+            <div class="card Primary-color">
+              <h1 class="Head-Secondary" style="padding-bottom: 16px">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="para">
+                Becoming a developer offers the opportunity to create innovative
+                solutions, continually learn new technologies, and transform
+                ideas into impactful applications, driving both personal and
+                professional growth.
+              </p>
+              <a href=""><button class="local-btn">Learn More</button></a>
+            </div>
+            <div><img class="img-3" src="/assets/Group 4.png" alt="" /></div>
+          </div>
+        </section>
+      </div>
+      <!-- Inspiration part -->
+      <div class="Inspiration">
+        <div>
+          <h1 class="Head">My Inspiration</h1>
+          <p class="para">
+            As a developer, I am inspired to innovate and solve complex
+            problems, creating impactful solutions that enhance lives and drive
+            technological progress.
+          </p>
+        </div>
+        <div></div>
+        </div>
       
     </main>
   </body>
