--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </section>
       </div>
       <!-- Inspiration part -->
-      <div class="Inspiration">
-        <div>
+      <div id="Inspiration">
+        <div class="parent">
           <h1 class="Head">My Inspiration</h1>
           <p class="para">
             As a developer, I am inspired to innovate and solve complex
@@ -107,9 +107,18 @@
             technological progress.
           </p>
         </div>
-        <div></div>
+        <iframe width="1076" height="550" style="border: 1px solid rgba(13, 19, 33, 0.2);border-radius:16px;margin:48px 40px; "  src="https://www.youtube.com/embed/DGHn2uOAVCE?si=pBk6D0GHtuyLtUKf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-      
+        <!-- Current Target -->
+      <div>
+        <div class="parent">
+            <h1 class="Head">My Current Target</h1>
+            <p class="para">
+                As a developer, my current target is to master advanced web frameworks and implement cutting-edge features to deliver seamless, high-performance user experiences.
+            </p>
+          </div>
+
+      </div>
     </main>
   </body>
 </html>
