--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
               visually appealing web pages by defining content and layout on the
               internet.
             </p>
+            <a href="https://www.w3schools.com/html/" class="ankor">Learn More</a>
           </div>
         </div>
         <div class="dibba-2">
@@ -152,6 +153,7 @@
             <p>
                 CSS is a stylesheet language used to design and style the visual presentation of web pages, ensuring they are attractive and user-friendly.
             </p>
+            <a href="https://www.w3schools.com/css/default.asp" class="ankor">Learn More</a>
           </div>
         </div>
         <div class="dibba-3">
@@ -161,6 +163,7 @@
             <p>
                 JavaScript is a versatile programming language that enables dynamic and interactive behavior on websites, enhancing user engagement and functionality.
             </p>
+            <a href="https://www.w3schools.com/js/default.asp" class="ankor">Learn More</a>
           </div>
         </div>
       </div>
@@ -182,7 +185,7 @@
             <div>
                 <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="assets/facebook.png" alt=""></a>
                 <a href="https://github.com/Adila-Rifa"><img src="assets/github.png" alt=""></a>
-                <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+                <a href="https://www.linkedin.com/feed/"><img src="assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </footer>
 
