--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
               </p>
               <button class="local-btn">Learn More</button>
             </div>
-            <div><img class="img-1" src="/assets/Layer_1.png" alt="" /></div>
+            <div><img class="img-1" src="./assets/Layer_1.png" alt="" /></div>
           </div>
           <!-- Card-2 -->
           <div class="card-details">
-            <div><img class="img-2" src="/assets/Group 3.png" alt="" /></div>
+            <div><img class="img-2" src="./assets/Group 3.png" alt="" /></div>
             <div class="card-2 Primary-color">
               <h1 class="Head-Secondary" style="padding-bottom: 16px">
                 I will help People by creating Modern Web System
@@ -93,7 +93,7 @@
               </p>
               <a href=""><button class="local-btn">Learn More</button></a>
             </div>
-            <div><img class="img-3" src="/assets/Group 4.png" alt="" /></div>
+            <div><img class="img-3" src="./assets/Group 4.png" alt="" /></div>
           </div>
         </section>
       </div>
@@ -180,7 +180,7 @@
        </section>
        <!-- Footer -->
         <footer class="footer-part" id="footer">
-            <div><h1 class="para">An Open Commitment by Awlad Hossain</h1>
+            <div><h1 class="para">An Open Commitment by Sayeda Adila Sultana Rifa</h1>
             </div>
             <div>
                 <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="assets/facebook.png" alt=""></a>
